--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="title_activity_map_fragment">MapFragment</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_map">Map</string>
+    <string name="Feed">Feed</string>
 </resources>
